environments/752/files/security/iptables/rules.v4
# Generated by iptables-save v1.6.0 on Tue Jun  4 05:00:42 2019
*security
:INPUT ACCEPT [118:11021]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [75:9703]
COMMIT
# Completed on Tue Jun  4 05:00:42 2019
# Generated by iptables-save v1.6.0 on Tue Jun  4 05:00:42 2019
*raw
:PREROUTING ACCEPT [152:16395]
:OUTPUT ACCEPT [75:9703]
COMMIT
# Completed on Tue Jun  4 05:00:42 2019
# Generated by iptables-save v1.6.0 on Tue Jun  4 05:00:42 2019
*mangle
:PREROUTING ACCEPT [152:16395]
:INPUT ACCEPT [148:16091]
:FORWARD ACCEPT [4:304]
:OUTPUT ACCEPT [75:9703]
:POSTROUTING ACCEPT [75:9703]
COMMIT
# Completed on Tue Jun  4 05:00:42 2019
# Generated by iptables-save v1.6.0 on Tue Jun  4 05:00:42 2019
*filter
:INPUT DROP [18:3042]
:FORWARD DROP [4:304]
:OUTPUT DROP [0:0]
-A INPUT -d 200.100.50.100/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 127.0.0.1/32 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -s 172.16.100.0/24 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -d 10.0.2.15/32 -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -d 10.0.2.15/32 -p tcp -m multiport --sports 80,443 -j ACCEPT
-A INPUT -s 172.16.100.0/24 -d 172.16.100.201/32 -p tcp -m multiport --sports 20,21,80,443 -j ACCEPT
-A INPUT -s 172.16.100.202/32 -d 172.16.100.201/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 172.16.100.0/24 -d 172.16.100.201/32 -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -s 172.16.100.0/24 -p tcp -m tcp --sport 22 -j ACCEPT
-A INPUT -s 172.16.100.0/24 -d 172.16.100.201/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 172.16.100.0/24 -d 172.16.100.201/32 -p tcp -m tcp --dport 3128 -j ACCEPT
-A INPUT -s 172.16.100.202/32 -p tcp -m tcp --sport 389 -j ACCEPT
-A INPUT -s 172.16.100.202/32 -p tcp -m tcp --sport 636 -j ACCEPT
-A INPUT -i enp0s9 -p udp -m state --state NEW,ESTABLISHED -m udp --dport 5000 -j ACCEPT
-A INPUT -i tun0 -j ACCEPT
-A FORWARD -s 172.16.100.0/24 -p tcp -m multiport --dports 80,443 -j ACCEPT
-A FORWARD -d 172.16.100.0/24 -p tcp -m multiport --sports 80,443 -j ACCEPT
-A FORWARD -s 172.16.100.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -d 172.16.100.0/24 -p udp -m udp --sport 53 -j ACCEPT
-A FORWARD -s 172.16.100.0/24 -p icmp -j ACCEPT
-A FORWARD -d 172.16.100.0/24 -p icmp -j ACCEPT
-A FORWARD -s 172.16.100.0/24 -d 172.16.100.0/24 -p tcp -j ACCEPT
-A FORWARD -s 172.16.100.0/24 -d 172.16.100.0/24 -p udp -j ACCEPT
-A FORWARD -d 172.16.100.202/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -s 172.16.100.202/32 -p tcp -m tcp --sport 22 -j ACCEPT
-A FORWARD -d 172.16.100.203/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -s 172.16.100.203/32 -p tcp -m tcp --sport 22 -j ACCEPT
-A FORWARD -d 172.16.100.204/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -s 172.16.100.204/32 -p tcp -m tcp --sport 22 -j ACCEPT
-A FORWARD -d 172.16.100.205/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -s 172.16.100.205/32 -p tcp -m tcp --sport 22 -j ACCEPT
-A FORWARD -d 172.16.100.206/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -s 172.16.100.206/32 -p tcp -m tcp --sport 22 -j ACCEPT
-A FORWARD -d 172.16.100.207/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -s 172.16.100.207/32 -p tcp -m tcp --sport 22 -j ACCEPT
-A FORWARD -s 172.16.100.0/24 -p tcp -m tcp --sport 1024:65535 --dport 25 -j ACCEPT
-A FORWARD -d 172.16.100.0/24 -p tcp -m tcp --sport 25 --dport 1024:65535 -j ACCEPT
-A FORWARD -s 172.16.100.0/24 -p tcp -m tcp --sport 1024:65535 --dport 110 -j ACCEPT
-A FORWARD -d 172.16.100.0/24 -p tcp -m tcp --sport 110 --dport 1024:65535 -j ACCEPT
-A FORWARD -s 172.16.100.0/24 -p tcp -m tcp --sport 1024:65535 --dport 143 -j ACCEPT
-A FORWARD -d 172.16.100.0/24 -p tcp -m tcp --sport 143 --dport 1024:65535 -j ACCEPT
-A FORWARD -s 172.16.100.0/24 -p tcp -m tcp --sport 1024:65535 --dport 993 -j ACCEPT
-A FORWARD -d 172.16.100.0/24 -p tcp -m tcp --sport 993 --dport 1024:65535 -j ACCEPT
-A FORWARD -s 172.16.100.0/24 -p tcp -m tcp --sport 1024:65535 --dport 21 -j ACCEPT
-A FORWARD -d 172.16.100.0/24 -p tcp -m tcp --sport 21 --dport 1024:65535 -j ACCEPT
-A FORWARD -s 172.16.100.0/24 -p tcp -m tcp --sport 1024:65535 --dport 20 -j ACCEPT
-A FORWARD -d 172.16.100.0/24 -p tcp -m tcp --sport 20 --dport 1024:65535 -j ACCEPT
-A FORWARD -s 172.16.100.0/24 -d 172.16.100.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -i tun0 -j ACCEPT
-A FORWARD -s 192.168.200.0/24 -i tun0 -o enp0s9 -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -s 200.100.50.100/32 -p tcp -m tcp --sport 22 -j ACCEPT
-A OUTPUT -d 127.0.0.1/32 -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT
-A OUTPUT -s 10.0.2.15/32 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -s 10.0.2.15/32 -p tcp -m multiport --dports 80,443 -j ACCEPT
-A OUTPUT -s 172.16.100.201/32 -d 172.16.100.0/24 -p tcp -m multiport --dports 20,21,80,443 -j ACCEPT
-A OUTPUT -s 172.16.100.201/32 -d 172.16.100.202/32 -p tcp -m tcp --sport 22 -j ACCEPT
-A OUTPUT -s 172.16.100.201/32 -d 172.16.100.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -d 172.16.100.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -s 172.16.100.201/32 -d 172.16.100.0/24 -p tcp -m tcp --sport 80 -j ACCEPT
-A OUTPUT -s 172.16.100.201/32 -d 172.16.100.0/24 -p tcp -m tcp --sport 3128 -j ACCEPT
-A OUTPUT -d 172.16.100.202/32 -p tcp -m tcp --dport 389 -j ACCEPT
-A OUTPUT -d 172.16.100.202/32 -p tcp -m tcp --dport 636 -j ACCEPT
-A OUTPUT -o enp0s9 -p udp -m state --state ESTABLISHED -m udp --sport 5000 -j ACCEPT
-A OUTPUT -o tun0 -j ACCEPT
COMMIT
# Completed on Tue Jun  4 05:00:42 2019
# Generated by iptables-save v1.6.0 on Tue Jun  4 05:00:42 2019
*nat
:PREROUTING ACCEPT [5:364]
:INPUT ACCEPT [1:60]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -d 200.100.50.100/32 -p tcp -m tcp --dport 52000 -j DNAT --to-destination 172.16.100.202:22
-A PREROUTING -d 200.100.50.100/32 -p tcp -m tcp --dport 53000 -j DNAT --to-destination 172.16.100.203:22
-A PREROUTING -d 200.100.50.100/32 -p tcp -m tcp --dport 54000 -j DNAT --to-destination 172.16.100.204:22
-A PREROUTING -d 200.100.50.100/32 -p tcp -m tcp --dport 55000 -j DNAT --to-destination 172.16.100.205:22
-A PREROUTING -d 200.100.50.100/32 -p tcp -m tcp --dport 56000 -j DNAT --to-destination 172.16.100.206:22
-A PREROUTING -d 200.100.50.100/32 -p tcp -m tcp --dport 57000 -j DNAT --to-destination 172.16.100.207:22
-A POSTROUTING -s 172.16.100.0/24 -j MASQUERADE
COMMIT
# Completed on Tue Jun  4 05:00:42 2019
